# advent-of-code

./: .clang-format  .gitignore  CMakeLists.txt
2022/aocutils/: input_reader.go  input_reader_test.go
2022/day10/: main.go
2022/day11/: main.go
2022/day11/bigint/: main-bigint.go
2022/day12/: Makefile  main.cc
2022/day13/: main.go
2022/day14/: main.go
2022/day15/: main.go
2022/day17/: main.go
2022/day18/: main.go
2022/day19/: main.go
2022/day2/: main.go
2022/day20/: _main copy.go  main.go
2022/day21/: main.go
2022/day22/: main.go
2022/day25/: main.go
2022/day3/: a.out  main.cpp  main.go
2022/day4/: main.go
2022/day5/: main.go
2022/day6/: main.go
2022/day7/: main.go
2022/day8/: main.go
2022/day9/: main.go
2023/: .clang-format  .gitignore  CMakeLists.txt
2023/day1/: main.cc
2023/day10/: main.cc
2023/day11/: main.cc
2023/day12/: main.cc
2023/day13/: main.cc
2023/day14/: main.cc
2023/day15/: main.cc
2023/day16/: main.cc
2023/day17/: main.cc
2023/day18/: main.cc
2023/day19/: main.cc
2023/day2/: main.cc
2023/day20/: main.cc
2023/day21/: main.cc
2023/day22/: main.cc
2023/day23/: main.cc
2023/day3/: main.cc
2023/day4/: main.cc
2023/day5/: main.cc  range.hh
2023/day6/: main.cc
2023/day7/: main.cc
2023/day8/: main.cc
2023/day9/: main.cc
2023/utils/: CMakeLists.txt
2023/utils/include/: aocutils.hh  command_line_args.hh  file_iterator.hh  input_reader.hh  pair_utils.hh  string_helper.hh
2023/utils/src/: command_line_args.cc  file_iterator.cc  input_reader.cc  string_helper.cc
2024/day1/: main.cc
2024/day10/: main.cc
2024/day11/: main.cc
2024/day12/: main.cc
2024/day13/: main.cc
2024/day2/: main.cc
2024/day3/: main.cc
2024/day4/: main.cc
2024/day5/: main.cc
2024/day6/: main.cc
2024/day7/: main.cc
2024/day8/: main.cc
2024/day9/: main.cc
cpputils/: CMakeLists.txt
cpputils/include/: algebra_utils.hh  aocutils.hh  input_reader.hh  logger.hh  numeric_utils.hh  pair_utils.hh  string_helper.hh
cpputils/src/: algebra_utils.cc  input_reader.cc  string_helper.cc
